peviewer: Add debug tab

--- a/tools/peview/peview.vcxproj
+++ b/tools/peview/peview.vcxproj
@@ -328,6 +328,7 @@
     <ClCompile Include="clrprp.c" />
     <ClCompile Include="colmgr.c" />
     <ClCompile Include="attributes.c" />
+    <ClCompile Include="debugprp.c" />
     <ClCompile Include="exlfdynamic.c" />
     <ClCompile Include="exlfexports.c" />
     <ClCompile Include="exlfimports.c" />
