--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -165,6 +165,10 @@ BEGIN
     IDD_PEPRODID, DIALOG
     BEGIN
     END
+
+    IDD_PEDEBUG, DIALOG
+    BEGIN
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -405,6 +409,14 @@ BEGIN
     EDITTEXT        IDC_PRODCHECKSUM,58,7,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     LTEXT           "Hash:",IDC_STATIC,7,21,38,8
     EDITTEXT        IDC_PRODHASH,58,21,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+END
+
+IDD_PEDEBUG DIALOGEX 0, 0, 300, 280
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Debug"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,0,300,280
 END
 
 
