--- a/phlib/phlib.vcxproj.filters
+++ b/phlib/phlib.vcxproj.filters
@@ -245,6 +245,9 @@
     <ClCompile Include="http.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="format_std.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\circbuf.h">
