--- a/tools/peview/peview.vcxproj
+++ b/tools/peview/peview.vcxproj
@@ -357,7 +357,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="colmgr.h" />
-    <ClInclude Include="include\pdb.h" />
+    <ClInclude Include="include\cvconst.h" />
+    <ClInclude Include="include\dia2.h" />
     <ClInclude Include="include\peview.h" />
     <ClInclude Include="include\prpsh.h" />
     <ClInclude Include="resource.h" />
