Add thread stack dialog highlighting

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -166,6 +166,7 @@ BEGIN
     PUSHBUTTON      "Refresh",IDC_REFRESH,165,212,50,14
     PUSHBUTTON      "Close",IDOK,219,212,50,14
     CONTROL         "",IDC_TREELIST,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | WS_TABSTOP | 0x2,2,2,269,209,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "Options",IDC_OPTIONS,2,212,50,14
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 270, 195
