peview: Update general tab page layout, Add inital options window

--- a/tools/peview/peview.vcxproj
+++ b/tools/peview/peview.vcxproj
@@ -333,6 +333,8 @@
     <ClCompile Include="exlfexports.c" />
     <ClCompile Include="exlfimports.c" />
     <ClCompile Include="exlfprp.c" />
+    <ClCompile Include="options.c" />
+    <ClCompile Include="pesectionprp.c" />
     <ClCompile Include="richprp.c" />
     <ClCompile Include="ldprp.c" />
     <ClCompile Include="expprp.c" />
