--- a/tools/peview/peview.vcxproj
+++ b/tools/peview/peview.vcxproj
@@ -329,6 +329,7 @@
     <ClCompile Include="colmgr.c" />
     <ClCompile Include="attributes.c" />
     <ClCompile Include="debugprp.c" />
+    <ClCompile Include="ehcontprp.c" />
     <ClCompile Include="exlfdynamic.c" />
     <ClCompile Include="exlfexports.c" />
     <ClCompile Include="exlfimports.c" />
